Fix bug 65974 - first window after start is below all other open windows r=laws, sr=hyatt, a=asa